# libCat

./: .clang-format  .clang-tidy  .clangd  .dir-locals.el  .gdbinit  .gdbinit.test  .gitignore  CMakeLists.txt  README.md  README.org  crt1.S  cstdint  cstdlib  format.cmake  int8-const-too-large.ii  justfile  main.c  main.cpp  mise.toml  unistd.h  utility
examples/: CMakeLists.txt  cat.cpp  client.cpp  echo.cpp  error.cpp  exit_with_10.cpp  hello.cpp  hello_libc.cpp  memory_copy.cpp  memory_copy_libc.cpp  raii.cpp  safe_arithmetic.cpp  server.cpp  sizeof.cpp  window.cpp
src/: CMakeLists.txt  global_includes.h  global_includes.hpp  libcat.ld
src/any/: any
src/compatibility/: concepts  cstdarg  cstdint  cstdlib  cunistd  legacy_string.h  stdarg.h  stdint.h  type_traits  utility
src/concepts/: concepts
src/crt/: crt1.S
src/cstdarg/: cstdarg  stdarg.h
src/cstdint/: cstdint  stdint.h
src/cstdint/detail/: legacy_types.hpp  simd.hpp  vector_primitives.hpp
src/cstdlib/: cstdlib  stdlib.h
src/libraries/algorithm/cat/: algorithm
src/libraries/allocator/: allocator
src/libraries/allocator/cat/: allocator  allocator_parameters  inplace_allocator  linear_allocator  named_allocator  null_allocator  page_allocator  pool_allocator  resizable_allocator
src/libraries/allocator/implementations/: free.tpp  get.tpp  meta_alloc.tpp  page_allocator.cpp  resizable_allocator.tpp
src/libraries/allocators/: allocators  page_allocator.h
src/libraries/allocators/cat/: allocators  linear_allocator  page_allocator
src/libraries/any/: any  any.h
src/libraries/any/cat/: any
src/libraries/arithmetic/cat/: arithmetic  arithmetic_interface  overflow_reference.hpp  precision_reference.hpp
src/libraries/array/: array
src/libraries/array/cat/: array
src/libraries/assert/cat/: assert
src/libraries/atomic/: atomic
src/libraries/atomic/cat/: atomic
src/libraries/bit/: bit
src/libraries/bit/cat/: bit
src/libraries/bit/implementations/: align_down.cpp  align_down.tpp  align_up.cpp  align_up.tpp  assume_aligned.tpp  bit_raw.tpp  is_aligned.cpp  is_aligned.tpp  popcount.cpp
src/libraries/bitset/cat/: bitset
src/libraries/bitvec/cat/: bitvec  raii_bitvec
src/libraries/buffer/: buffer  buffer.h
src/libraries/cast/: cast
src/libraries/cast/cat/: cast
src/libraries/collection/: collection
src/libraries/collection/cat/: collection
src/libraries/compare/: compare
src/libraries/concepts/: concepts  concepts.h
src/libraries/debug/: debug
src/libraries/errno/: errno.h
src/libraries/file/: file
src/libraries/format/: format
src/libraries/iterator/: iterator
src/libraries/linux/: build  linux
src/libraries/list/: list
src/libraries/math/: math
src/libraries/maybe/: maybe  maybe.h
src/libraries/memory/: memory  memory.h
src/libraries/meta/: meta
src/libraries/network/: socket  socket.h
src/libraries/notype/: notype
src/libraries/numerals/: numerals  numerals.cpp  numerals.h
src/libraries/numeric_limits/: limits
src/libraries/optional/: optional
src/libraries/pthread/: pthread.h
src/libraries/raii/: raii
src/libraries/result/: result  result.cpp  result.h
src/libraries/runtime/: runtime
src/libraries/scaredy/: scaredy
src/libraries/simd/: simd  simd.cpp  simd.h
src/libraries/socket/: socket
src/libraries/span/: span
src/libraries/stdlib/: stdlib.h
src/libraries/string/: string  string.h
src/libraries/thread/: clone.s  thread  thread.h
src/libraries/tuple/: tuple
src/libraries/type_list/: type_list
src/libraries/type_traits/: type_traits  type_traits.h
src/libraries/unique/: unique
src/libraries/unistd/: unistd.cpp  unistd.h
src/libraries/utility/: utility  utility.h
src/libraries/variant/: variant
src/libraries/x/: x
src/libraries/x11/: x11
src/maybe/: maybe.h
src/pthread/: pthread.h
src/result/: errno.h  result.hpp
src/runtime/: exit.cpp  exit.h  mmap.h  runtime.h  start.cpp  start.h
src/runtime/cpp/: __stack_chk_fail.cpp  _start.cpp  align_stack_pointer_16.cpp  align_stack_pointer_32.cpp  dont_optimize_out.cpp  exit.cpp  load_argc.cpp  load_argv.cpp  load_base_stack_pointer.cpp  mmap.cpp  munmap.cpp  start.cpp
src/runtime/implementations/: _start.cpp  exit.cpp  load_argv.cpp  load_base_stack_pointer.cpp  mmap.cpp  munmap.cpp
src/start_exit/: start_exit.hpp
src/type_traits/: type_traits
src/unistd/: cunistd  syscalls.s  unistd  unistd.h
src/unistd/detail/: syscall2.s  syscall3.s  syscall4.s
src/utility/: utility
tests/: CMakeLists.txt  arrays.cpp  buffers.cpp  compare_strings.cpp  copy_memory.cpp  ctor.ld  gdb_pretty_printers.gdb  linear_allocator.cpp  maybe.cpp  optional.cpp  paging_memory.cpp  result_failure.cpp  result_success.cpp  simd.cpp  string_length.cpp  test_alloc.cpp  test_arrays.cpp  test_compare_strings.cpp  test_copy_memory.cpp  test_dummy.cpp  test_format_strings.cpp  test_linear_allocator.cpp  test_list.cpp  test_meta.cpp  test_numerals.cpp  test_optional.cpp  test_paging_memory.cpp  test_raii.cpp  test_reflection.cpp  test_scaredy.cpp  test_set_memory.cpp  test_simd.cpp  test_string_length.cpp  test_thread.cpp  test_tuple.cpp  test_variant.cpp  test_vector.cpp  thread.cpp  unit_tests.cpp  unit_tests.hpp
tests/minunit/: minunit.h
tests/src/: gdb_pretty_printer_fixture.cpp  test_alloc.cpp  test_allocator_hooks.cpp  test_allocator_parameters.cpp  test_arithmetic.cpp  test_arrays.cpp  test_atomic.cpp  test_bit.cpp  test_bit_span.cpp  test_bit_x64.cpp  test_bitset.cpp  test_bitvec.cpp  test_cast.cpp  test_compare_strings.cpp  test_copy_memory.cpp  test_cpuid.cpp  test_dummy.cpp  test_dyn.cpp  test_fill_memory.cpp  test_format_strings.cpp  test_futex.cpp  test_inplace_allocator.cpp  test_invoke.cpp  test_iterable.cpp  test_iterator.cpp  test_linear_allocator.cpp  test_list.cpp  test_magic_get.cpp  test_math.cpp  test_maybe.cpp  test_meta.cpp  test_named_allocator.cpp  test_narrow_cast.cpp  test_numerals.cpp  test_optional.cpp  test_paging_memory.cpp  test_pointer_in_range.cpp  test_pool_allocator.cpp  test_raii.cpp  test_reallocation_disjoint.cpp  (+22 more)
(+547 files in other folders)
